14 April 2009: Wouter
	- bug #245: fix munin plugin, perform cleanup of stale lockfiles.
	- makedist.sh; better help text.
	- cache-min-ttl option and tests.
	- mingw detect error condition on TCP sockets (NOTCONN).

9 April 2009: Wouter
	- Fix for removal of RSASHA256_NSEC3 protonumber from ldns.
	- ldns tarball updated.
	- iana portlist update.
	- detect GOST support in openssl-1.0.0-beta1, and fix compile problem
	  because that openssl defines the name STRING for itself.

6 April 2009: Wouter
	- windows compile fix.
	- Detect FreeBSD jail without ipv6 addresses assigned.
	- python libunbound wrapper unit test.
	- installs the following files. Default is to not build them.
	  	from configure --with-pythonmodule:
	  /usr/lib/python2.x/site-packages/unboundmodule.py
	  	from configure --with-pyunbound:
	  /usr/lib/python2.x/site-packages/unbound.py
	  /usr/lib/python2.x/site-packages/_unbound.so*
	  The example python scripts (pythonmod/examples and
	  libunbound/python/examples) are not installed.
	- python invalidate routine respects packed rrset ids and locks.
	- clock skew checks in unbound, config statements.
	- nxdomain ttl considerations in requirements.txt

3 April 2009: Wouter
	- Fixed a bug that caused messages to be stored in the cache too 
	  long.  Hard to trigger, but NXDOMAINs for nameservers or CNAME
	  targets have been more vulnerable to the TTL miscalculation bug. 
	- documentation test fixed for python addition.

2 April 2009: Wouter
	- pyunbound (libunbound python plugin) compiles using libtool.
	- documentation for pythonmod and pyunbound is generated in doc/html.
	- iana portlist updated.
	- fixed bug in unbound-control flush_zone where it would not flush
	  every message in the target domain.  This especially impacted 
	  NXDOMAIN messages which could remain in the cache regardless.
	- python module test package.

1 April 2009: Wouter
	- suppress errors when trying to contact authority servers that gave